[SC-11069] fixed overlapping of the header star over the filter dialog

--- a/src/shared/common/styles/dx-customs.less
+++ b/src/shared/common/styles/dx-customs.less
@@ -100,7 +100,7 @@ input.form-control {
     z-index: 9999999999!important;
 }
 
-.dx-datagrid-drag-action {
+.dx-datagrid-drag-header.dx-datagrid-drag-action {
     z-index: 10000000000!important;
 }
 
